kubernetes/nextcloud/database.yaml
apiVersion: apps/v1
kind: StatefulSet   
metadata:
  name: nextcloud-database
  namespace: nextcloud
  labels:
    app: nextcloud  
spec:
  serviceName: nextcloud-database
  replicas: 1                         
  selector:
    matchLabels:
      pod-label: nextcloud-database
  template:
    metadata:
      labels:
        pod-label: nextcloud-database
    spec:
     terminationGracePeriodSeconds: 1800
     volumes:
      - name: nextcloud-database
        persistentVolumeClaim:      
          claimName: nextcloud-database
     containers:
      - name: mariadb
        image: linuxserver/mariadb
        imagePullPolicy: Always
        volumeMounts:
         - name: nextcloud-database
           mountPath: /config             
           subPath: mariadb-config
