kubernetes/nextcloud/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nextcloud.local.syspawn.com`)
      kind: Rule
      services:
        - name: nextcloud
          port: 443
  tls:
    secretName: local-syspawn-com-tls
